get kfold working again

--- a/template/src/investigate.ipynb
+++ b/template/src/investigate.ipynb
@@ -30,7 +30,10 @@
     "from matplotlib import pyplot as plt\n",
     "from pprint import pprint\n",
     "\n",
+    "from src.data_preparation import load_prepared_data\n",
+    "\n",
     "INFERENCES_DIR = os.path.join(\"..\", \"inferences\")\n",
+    "DATA_DIR = os.path.join(\"..\", \"data\", \"prepared\")\n",
     "PLOTS_DIR = os.path.join(\"..\", \"plots\")\n",
     "ARVIZ_STYLE = \"arviz-redish\"\n",
     "\n",
@@ -3668,6 +3671,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9393a825-c436-44fb-85a5-4ecd3dc90939",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "attempted relative import with no known parent package",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_preparation\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ExamplePreparedData\n\u001b[1;32m      4\u001b[0m data \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      5\u001b[0m     n: ExamplePreparedData(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mjson\u001b[38;5;241m.\u001b[39mload(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(DATA_DIR, n)))\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m n \u001b[38;5;129;01min\u001b[39;00m os\u001b[38;5;241m.\u001b[39mlistdir(DATA_DIR)\n\u001b[1;32m      7\u001b[0m }\n",
+      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
+     ]
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    n: load_prepared_data(os.path.join(DATA_DIR, n))\n",
+    "    for n in os.listdir(DATA_DIR)\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "94be5317",
    "metadata": {},
@@ -3819,7 +3847,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "38bf04de",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3877,7 +3907,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "e2604a42",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3896,7 +3928,7 @@
     "axes = axes.ravel()\n",
     "for (name, idata), ax in zip(idatas.items(), axes):\n",
     "        az.plot_lm(\n",
-    "            y=\"y\",\n",
+    "            y=data[]\"y\",\n",
     "            x=x,\n",
     "            idata=idata,\n",
     "            y_hat=\"yrep\",\n",
@@ -3912,6 +3944,24 @@
     "\n",
     "suptitle = f.suptitle(\"Marginal posterior predictive distributions\")\n",
     "f.savefig(os.path.join(PLOTS_DIR, \"posterior_predictive_comparison.png\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5caa1b08-f5a4-4162-8aad-abe7e9da50b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object `az.plot_lm` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "az.plot_lm?"
    ]
   }
  ],
@@ -3931,7 +3981,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
