Use ruff and do fixes

--- a/bibat/template/notebooks/investigate.ipynb
+++ b/bibat/template/notebooks/investigate.ipynb
@@ -3663,10 +3663,12 @@
    ],
    "source": [
     "idatas = {\n",
-    "    d.replace(\".json\", \"\"): az.InferenceData.from_zarr(os.path.join(INFERENCES_DIR, d, \"idata\"))\n",
+    "    d.replace(\".json\", \"\"): az.InferenceData.from_zarr(\n",
+    "        os.path.join(INFERENCES_DIR, d, \"idata\")\n",
+    "    )\n",
     "    for d in os.listdir(INFERENCES_DIR)\n",
     "    if os.path.isdir(os.path.join(INFERENCES_DIR, d))\n",
-    "}     \n",
+    "}\n",
     "idatas[\"interaction\"]"
    ]
   },
@@ -3825,10 +3827,16 @@
    ],
    "source": [
     "posterior_comparison = az.compare(idatas, var_name=\"llik\")\n",
-    "posterior_comparison[\"mean_ll_posterior\"], posterior_comparison[\"mean_ll_kfold\"] = (\n",
+    "(\n",
+    "    posterior_comparison[\"mean_ll_posterior\"],\n",
+    "    posterior_comparison[\"mean_ll_kfold\"],\n",
+    ") = (\n",
     "    pd.Series(\n",
-    "        {name: idata.log_likelihood[var].mean().values for name, idata in idatas.items()}, \n",
-    "        dtype=\"float64\"\n",
+    "        {\n",
+    "            name: idata.log_likelihood[var].mean().values\n",
+    "            for name, idata in idatas.items()\n",
+    "        },\n",
+    "        dtype=\"float64\",\n",
     "    )\n",
     "    for var in [\"llik\", \"llik_kfold\"]\n",
     ")\n",
@@ -3869,13 +3877,17 @@
     "    scatter = ax.scatter(\n",
     "        idata.log_likelihood[\"llik\"].mean(dim=[\"chain\", \"draw\"]),\n",
     "        idata.log_likelihood[\"llik_kfold\"].mean(dim=[\"chain\", \"draw\"]),\n",
-    "        s=5\n",
+    "        s=5,\n",
     "    )\n",
     "    line = ax.plot(ax.get_xlim(), ax.get_ylim(), color=\"red\", zorder=0)\n",
-    "    text = ax.set(xlabel=\"In sample\", ylabel=\"out of sample\", title=\"Model: \" + name)\n",
+    "    text = ax.set(\n",
+    "        xlabel=\"In sample\", ylabel=\"out of sample\", title=\"Model: \" + name\n",
+    "    )\n",
     "\n",
     "suptitle = f.suptitle(\"Average posterior log likelihood\")\n",
-    "legend = f.legend([scatter, line[0]], [\"observation\", \"y=x\"], frameon=False, loc=\"right\")\n",
+    "legend = f.legend(\n",
+    "    [scatter, line[0]], [\"observation\", \"y=x\"], frameon=False, loc=\"right\"\n",
+    ")\n",
     "f.savefig(os.path.join(PLOTS_DIR, \"posterior_ll_comparison.png\"))"
    ]
   },
@@ -3927,19 +3939,19 @@
     "f, axes = plt.subplots(1, 3, figsize=[20, 5], sharey=True)\n",
     "axes = axes.ravel()\n",
     "for (name, idata), ax in zip(idatas.items(), axes):\n",
-    "        az.plot_lm(\n",
-    "            y=\"y\",\n",
-    "            x=x,\n",
-    "            idata=idata,\n",
-    "            y_hat=\"yrep\",\n",
-    "            axes=ax,\n",
-    "            kind_pp=\"hdi\",\n",
-    "            y_kwargs={\"markersize\": 6, \"color\":\"black\"},\n",
-    "            grid=False\n",
-    "        )\n",
-    "        ax.legend(frameon=False)\n",
-    "        ax.set(title=name.replace(\"_\", \" \").capitalize(), ylabel=\"\")\n",
-    "        ax.set_xticks([], [])\n",
+    "    az.plot_lm(\n",
+    "        y=\"y\",\n",
+    "        x=x,\n",
+    "        idata=idata,\n",
+    "        y_hat=\"yrep\",\n",
+    "        axes=ax,\n",
+    "        kind_pp=\"hdi\",\n",
+    "        y_kwargs={\"markersize\": 6, \"color\": \"black\"},\n",
+    "        grid=False,\n",
+    "    )\n",
+    "    ax.legend(frameon=False)\n",
+    "    ax.set(title=name.replace(\"_\", \" \").capitalize(), ylabel=\"\")\n",
+    "    ax.set_xticks([], [])\n",
     "axes[0].set_ylabel(\"y\")\n",
     "\n",
     "suptitle = f.suptitle(\"Marginal posterior predictive distributions\")\n",
@@ -3961,7 +3973,7 @@
     }
    ],
    "source": [
-    "az.plot_lm?"
+    "?az.plot_lm"
    ]
   }
  ],
