--- a/example_projects/baseball/baseball/investigate.ipynb
+++ b/example_projects/baseball/baseball/investigate.ipynb
@@ -182,9 +182,16 @@
     "def plot_raw_data(ax: plt.Axes, ppd: PreparedData) -> plt.Axes:\n",
     "    \"\"\"Plot raw data on an axis.\"\"\"\n",
     "    m = ppd.measurements\n",
-    "    scatter = ax.scatter(m[\"n_attempt\"], m[\"n_success\"] / m[\"n_attempt\"], s=3, color=\"black\", label=\"observed\")\n",
+    "    scatter = ax.scatter(\n",
+    "        m[\"n_attempt\"],\n",
+    "        m[\"n_success\"] / m[\"n_attempt\"],\n",
+    "        s=3,\n",
+    "        color=\"black\",\n",
+    "        label=\"observed\",\n",
+    "    )\n",
     "    ax.set(xlabel=\"Attempts\", ylabel=\"Success rate\")\n",
     "    return ax\n",
+    "\n",
     "\n",
     "f, axes = plt.subplots(1, 2, figsize=[12, 5], sharey=True, sharex=True)\n",
     "for ax, ppd in zip(axes, data.values()):\n",
@@ -3748,7 +3755,7 @@
     "    d: az.InferenceData.from_zarr(os.path.join(INFERENCES_DIR, d, \"idata\"))\n",
     "    for d in os.listdir(INFERENCES_DIR)\n",
     "    if os.path.isdir(os.path.join(INFERENCES_DIR, d))\n",
-    "}     \n",
+    "}\n",
     "idatas[\"gpareto2006\"]"
    ]
   },
@@ -4420,11 +4427,11 @@
    ],
    "source": [
     "def plot_quantiles(\n",
-    "    ax: plt.Axes, \n",
+    "    ax: plt.Axes,\n",
     "    idata_group: xr.Dataset,\n",
     "    measurements: pd.DataFrame,\n",
     "    color: str = \"tab:blue\",\n",
-    "    label: Optional[str] = None\n",
+    "    label: Optional[str] = None,\n",
     ") -> plt.Axes:\n",
     "    \"\"\"Plot 1%-99% quantile intervals for the alpha variable on an axis.\"\"\"\n",
     "    x = measurements[\"n_attempt\"]\n",
@@ -4436,13 +4443,13 @@
     "        .unstack(\"quantile\")\n",
     "    )\n",
     "    vlines = ax.vlines(\n",
-    "        measurements[\"n_attempt\"], \n",
-    "        qs[0.01], \n",
-    "        qs[0.99], \n",
-    "        zorder=0, \n",
-    "        color=color, \n",
-    "        alpha=0.3, \n",
-    "        label=label\n",
+    "        measurements[\"n_attempt\"],\n",
+    "        qs[0.01],\n",
+    "        qs[0.99],\n",
+    "        zorder=0,\n",
+    "        color=color,\n",
+    "        alpha=0.3,\n",
+    "        label=label,\n",
     "    )\n",
     "    return ax\n",
     "\n",
@@ -4455,7 +4462,9 @@
     "        idata = idatas[model_prefix + data_name]\n",
     "        ax = plot_raw_data(ax, ppd)\n",
     "        ax = plot_quantiles(ax, idata.prior, ppd.measurements)\n",
-    "        ax.set_title(f\"Prior quantiles: {model_prefix} model with {ppd.name} data\")\n",
+    "        ax.set_title(\n",
+    "            f\"Prior quantiles: {model_prefix} model with {ppd.name} data\"\n",
+    "        )\n",
     "\n",
     "f.savefig(os.path.join(PLOT_DIR, \"prior_quantiles.png\"))"
    ]
@@ -4493,8 +4502,19 @@
     "    idata_n = idatas[\"normal\" + data_name]\n",
     "    ppd = data[data_name]\n",
     "    ax = plot_raw_data(ax, ppd)\n",
-    "    ax = plot_quantiles(ax, idata_gp.posterior, ppd.measurements, label=\"Generalised Pareto model\")\n",
-    "    ax = plot_quantiles(ax, idata_n.posterior, ppd.measurements, color=\"tab:orange\", label=\"Normal model\")\n",
+    "    ax = plot_quantiles(\n",
+    "        ax,\n",
+    "        idata_gp.posterior,\n",
+    "        ppd.measurements,\n",
+    "        label=\"Generalised Pareto model\",\n",
+    "    )\n",
+    "    ax = plot_quantiles(\n",
+    "        ax,\n",
+    "        idata_n.posterior,\n",
+    "        ppd.measurements,\n",
+    "        color=\"tab:orange\",\n",
+    "        label=\"Normal model\",\n",
+    "    )\n",
     "    leg = ax.legend(frameon=False)\n",
     "    ax.set_title(f\"{ppd.name} data\")\n",
     "f.suptitle(\"Modelled vs observed success rates\")\n",
